[gd_scene load_steps=11 format=3 uid="uid://b5t3l4pfu8ux0"]

[ext_resource type="Script" path="res://scripts/starting_menu/StartingMenu.gd" id="1_jhbnk"]
[ext_resource type="Texture2D" uid="uid://ckwa2200rm4p7" path="res://assets/menu_background.png" id="1_r086n"]
[ext_resource type="FontFile" uid="uid://durkid6h8al5f" path="res://assets/fonts/joystix/joystix monospace.otf" id="3_dr05j"]
[ext_resource type="StyleBox" uid="uid://by13pr7qwxvwc" path="res://resources/PanelsStyle.tres" id="3_thjbm"]
[ext_resource type="Script" path="res://scripts/Settings.gd" id="5_3hn61"]
[ext_resource type="Theme" uid="uid://tj0abbu7snmi" path="res://resources/StartingMenu.tres" id="6_j1tmb"]
[ext_resource type="Texture2D" uid="uid://caay73mxdrxvi" path="res://assets/how_to_play.png" id="7_va82g"]

[sub_resource type="Theme" id="Theme_gfhpx"]

[sub_resource type="Theme" id="Theme_ik8wo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8e17"]
bg_color = Color(0, 0.207843, 0.552941, 0.796078)

[node name="StartingMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80
script = ExtResource("1_jhbnk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(480, 270)
scale = Vector2(1, 0.65)
texture = ExtResource("1_r086n")
region_enabled = true
region_rect = Rect2(61.0679, 20.0525, 963.729, 853.496)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 375)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 6
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = SubResource("Theme_gfhpx")
theme_override_styles/panel = ExtResource("3_thjbm")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 7
alignment = 1

[node name="StartGameButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_dr05j")
text = "Start Game"

[node name="SettingsButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_dr05j")
text = "Settings"

[node name="HowToPlayButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ik8wo")
theme_override_fonts/font = ExtResource("3_dr05j")
text = "How To Play"

[node name="CreditsButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ik8wo")
theme_override_fonts/font = ExtResource("3_dr05j")
text = "Credits"

[node name="ExitButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_dr05j")
text = "Exit"

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 2
script = ExtResource("5_3hn61")

[node name="MarginContainer" type="MarginContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.5
offset_top = -60.0
offset_right = 249.5
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer"]
custom_minimum_size = Vector2(200, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("6_j1tmb")
theme_override_styles/panel = ExtResource("3_thjbm")

[node name="MarginContainer" type="MarginContainer" parent="Settings/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Global" type="VBoxContainer" parent="Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GlobalLabel" type="Label" parent="Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Global"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_dr05j")
text = "Global Volume"

[node name="GlobalSlider" type="HSlider" parent="Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Global"]
process_mode = 3
layout_mode = 2
max_value = 1.0
step = 0.1
tick_count = 11

[node name="Music" type="VBoxContainer" parent="Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Music"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_dr05j")
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Music"]
process_mode = 3
layout_mode = 2
max_value = 1.0
step = 0.1
tick_count = 11

[node name="SFX" type="VBoxContainer" parent="Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SFX"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_dr05j")
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SFX"]
process_mode = 3
layout_mode = 2
max_value = 1.0
step = 0.1
tick_count = 11

[node name="Menu" type="VBoxContainer" parent="Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MenuLabel" type="Label" parent="Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_dr05j")
text = "Menu Sounds Volume"

[node name="MenuSlider" type="HSlider" parent="Settings/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Menu"]
process_mode = 3
layout_mode = 2
max_value = 1.0
step = 0.1
tick_count = 11

[node name="Back" type="Button" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_ik8wo")
theme_override_fonts/font = ExtResource("3_dr05j")
text = "Back"

[node name="HowToPlay" type="Control" parent="."]
visible = false
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="HowToPlay"]
position = Vector2(360, 191)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_va82g")

[node name="Back2" type="Button" parent="HowToPlay"]
layout_mode = 2
offset_left = 530.0
offset_top = 309.0
offset_right = 775.0
offset_bottom = 337.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_ik8wo")
theme_override_fonts/font = ExtResource("3_dr05j")
text = "back to main menu"

[node name="Credits" type="Control" parent="."]
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Credits"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.477
anchor_right = 0.5
anchor_bottom = 0.477
offset_left = -412.0
offset_top = -234.8
offset_right = 398.0
offset_bottom = 245.2
theme_override_styles/panel = SubResource("StyleBoxFlat_n8e17")

[node name="MarginContainer" type="MarginContainer" parent="Credits/PanelContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_dr05j")
text = "					    Development:
					 Valeria Gutiérrez
				 	  Sebastián Mira
					   Diego García

					   GUI elements:
		Mounir Tohami - https://mounirtohami.itch.io/

						   SFX:
		 ColorAlpha - https://coloralpha.itch.io/

	Ingame, Defeat screen and Victory screen music:
		Blue Lava - https://blue-lava.itch.io/

					    Menu music:
		AOHA / Nid - https://aoha-music.itch.io/

			  Defeat and Victory screen art:
		With the help of OpenAI GPT-4 and modifications
					made by Diego García

				    Game Background:
		   Cup Noodle - https://cupnooble.itch.io/

					  Characters:
			 AxulArt - https://axulart.itch.io/

					Inventory Boxes:
			 Roupiks - https://roupiks.itch.io/
"

[node name="Back" type="Button" parent="Credits"]
layout_mode = 0
offset_left = 491.0
offset_top = -28.0
offset_right = 725.0
theme_override_fonts/font = ExtResource("3_dr05j")
text = "back to main menu"
